k8s/login-microfront/login-microfront-deployment-dev.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: modulefederation-login-microfront-deployment-dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: modulefederation-login-microfront-dev
  template:
    metadata:
      labels:
        app: modulefederation-login-microfront-dev
    spec:
      containers:
      - name: front-vucem30-container-dev
        image: ghcr.io/vucem30/dockerized-modulefederation-login-microfront:latest
        ports:
        - containerPort: 80
      imagePullSecrets:
      - name: vucem30registrykey
