k8s/login-microfront/login-microfront-ingress-dev.yaml
# Create Ingress
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: modulefederation-login-microfront-ingress-dev
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
  - host: front.v30.ultrasist.net
    http:
      paths:
      - path: /login
        pathType: Prefix
        backend:
          service:
            name: modulefederation-login-microfront-service-dev
            port:
              number: 4201
  tls:
  - hosts:
    - front.v30.ultrasist.net
    secretName: v30certs
